A1/y.output
Grammar

    0 $accept: program $end

    1 program: global_decl_statement_list func_def

    2 global_decl_statement_list: global_decl_statement_list func_decl
    3                           | global_decl_statement_list var_decl_stmt
    4                           | var_decl_stmt
    5                           | func_decl

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    7          | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON

    8 func_header: named_type NAME

    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   10         | func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

   11 formal_param_list: formal_param_list COMMA formal_param
   12                  | formal_param

   13 formal_param: param_type NAME

   14 param_type: INTEGER
   15           | FLOAT
   16           | BOOL
   17           | STRING

   18 optional_local_var_decl_stmt_list: %empty
   19                                  | var_decl_stmt_list

   20 var_decl_stmt_list: var_decl_stmt
   21                   | var_decl_stmt_list var_decl_stmt

   22 var_decl_stmt: named_type var_decl_item_list SEMICOLON

   23 var_decl_item_list: var_decl_item_list COMMA var_decl_item
   24                   | var_decl_item

   25 var_decl_item: NAME

   26 named_type: INTEGER
   27           | FLOAT
   28           | VOID
   29           | BOOL
   30           | STRING

   31 statement_list: statement_list statement
   32               | %empty

   33 statement: assignment_statement
   34          | print_statement
   35          | read_statement

   36 assignment_statement: variable_as_operand ASSIGN_OP expression SEMICOLON

   37 variable_as_operand: variable_name

   38 variable_name: NAME

   39 print_statement: WRITE expression SEMICOLON

   40 read_statement: READ variable_name SEMICOLON

   41 expression: expression PLUS expression
   42           | expression MINUS expression
   43           | expression MULT expression
   44           | expression DIV expression
   45           | MINUS expression
   46           | LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET
   47           | variable_as_operand
   48           | constant_as_operand

   49 constant_as_operand: INT_NUM
   50                    | FLOAT_NUM
   51                    | STR_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 14 26
VOID (259) 28
FLOAT (260) 15 27
STRING (261) 17 30
BOOL (262) 16 29
ASSIGN_OP (263) 36
SEMICOLON (264) 6 7 22 36 39 40
LEFT_ROUND_BRACKET (265) 6 7 9 10 46
RIGHT_ROUND_BRACKET (266) 6 7 9 10 46
LEFT_CURLY_BRACKET (267) 9 10
RIGHT_CURLY_BRACKET (268) 9 10
COMMA (269) 11 23
WRITE (270) 39
READ (271) 40
PLUS (272) 41
MINUS (273) 42 45
MULT (274) 43
DIV (275) 44
INT_NUM (276) 49
FLOAT_NUM (277) 50
NAME (278) 8 13 25 38
STR_CONST (279) 51


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
program (26)
    on left: 1, on right: 0
global_decl_statement_list (27)
    on left: 2 3 4 5, on right: 1 2 3
func_decl (28)
    on left: 6 7, on right: 2 5
func_header (29)
    on left: 8, on right: 6 7 9 10
func_def (30)
    on left: 9 10, on right: 1
formal_param_list (31)
    on left: 11 12, on right: 6 9 11
formal_param (32)
    on left: 13, on right: 11 12
param_type (33)
    on left: 14 15 16 17, on right: 13
optional_local_var_decl_stmt_list (34)
    on left: 18 19, on right: 9 10
var_decl_stmt_list (35)
    on left: 20 21, on right: 19 21
var_decl_stmt (36)
    on left: 22, on right: 3 4 20 21
var_decl_item_list (37)
    on left: 23 24, on right: 22 23
var_decl_item (38)
    on left: 25, on right: 23 24
named_type (39)
    on left: 26 27 28 29 30, on right: 8 22
statement_list (40)
    on left: 31 32, on right: 9 10 31
statement (41)
    on left: 33 34 35, on right: 31
assignment_statement (42)
    on left: 36, on right: 33
variable_as_operand (43)
    on left: 37, on right: 36 47
variable_name (44)
    on left: 38, on right: 37 40
print_statement (45)
    on left: 39, on right: 34
read_statement (46)
    on left: 40, on right: 35
expression (47)
    on left: 41 42 43 44 45 46 47 48, on right: 36 39 41 42 43 44 45
    46
constant_as_operand (48)
    on left: 49 50 51, on right: 48


State 0

    0 $accept: . program $end

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    program                     go to state 6
    global_decl_statement_list  go to state 7
    func_decl                   go to state 8
    func_header                 go to state 9
    var_decl_stmt               go to state 10
    named_type                  go to state 11


State 1

   26 named_type: INTEGER .

    $default  reduce using rule 26 (named_type)


State 2

   28 named_type: VOID .

    $default  reduce using rule 28 (named_type)


State 3

   27 named_type: FLOAT .

    $default  reduce using rule 27 (named_type)


State 4

   30 named_type: STRING .

    $default  reduce using rule 30 (named_type)


State 5

   29 named_type: BOOL .

    $default  reduce using rule 29 (named_type)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 12


State 7

    1 program: global_decl_statement_list . func_def
    2 global_decl_statement_list: global_decl_statement_list . func_decl
    3                           | global_decl_statement_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    func_decl      go to state 13
    func_header    go to state 14
    func_def       go to state 15
    var_decl_stmt  go to state 16
    named_type     go to state 11


State 8

    5 global_decl_statement_list: func_decl .

    $default  reduce using rule 5 (global_decl_statement_list)


State 9

    6 func_decl: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    7          | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 17


State 10

    4 global_decl_statement_list: var_decl_stmt .

    $default  reduce using rule 4 (global_decl_statement_list)


State 11

    8 func_header: named_type . NAME
   22 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 18

    var_decl_item_list  go to state 19
    var_decl_item       go to state 20


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 global_decl_statement_list: global_decl_statement_list func_decl .

    $default  reduce using rule 2 (global_decl_statement_list)


State 14

    6 func_decl: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    7          | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON
    9 func_def: func_header . LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   10         | func_header . LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 21


State 15

    1 program: global_decl_statement_list func_def .

    $default  reduce using rule 1 (program)


State 16

    3 global_decl_statement_list: global_decl_statement_list var_decl_stmt .

    $default  reduce using rule 3 (global_decl_statement_list)


State 17

    6 func_decl: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    7          | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET SEMICOLON

    INTEGER              shift, and go to state 22
    FLOAT                shift, and go to state 23
    STRING               shift, and go to state 24
    BOOL                 shift, and go to state 25
    RIGHT_ROUND_BRACKET  shift, and go to state 26

    formal_param_list  go to state 27
    formal_param       go to state 28
    param_type         go to state 29


State 18

    8 func_header: named_type NAME .
   25 var_decl_item: NAME .

    LEFT_ROUND_BRACKET  reduce using rule 8 (func_header)
    $default            reduce using rule 25 (var_decl_item)


State 19

   22 var_decl_stmt: named_type var_decl_item_list . SEMICOLON
   23 var_decl_item_list: var_decl_item_list . COMMA var_decl_item

    SEMICOLON  shift, and go to state 30
    COMMA      shift, and go to state 31


State 20

   24 var_decl_item_list: var_decl_item .

    $default  reduce using rule 24 (var_decl_item_list)


State 21

    6 func_decl: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET SEMICOLON
    7          | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET SEMICOLON
    9 func_def: func_header LEFT_ROUND_BRACKET . formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   10         | func_header LEFT_ROUND_BRACKET . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER              shift, and go to state 22
    FLOAT                shift, and go to state 23
    STRING               shift, and go to state 24
    BOOL                 shift, and go to state 25
    RIGHT_ROUND_BRACKET  shift, and go to state 32

    formal_param_list  go to state 33
    formal_param       go to state 28
    param_type         go to state 29


State 22

   14 param_type: INTEGER .

    $default  reduce using rule 14 (param_type)


State 23

   15 param_type: FLOAT .

    $default  reduce using rule 15 (param_type)


State 24

   17 param_type: STRING .

    $default  reduce using rule 17 (param_type)


State 25

   16 param_type: BOOL .

    $default  reduce using rule 16 (param_type)


State 26

    7 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . SEMICOLON

    SEMICOLON  shift, and go to state 34


State 27

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET SEMICOLON
   11 formal_param_list: formal_param_list . COMMA formal_param

    RIGHT_ROUND_BRACKET  shift, and go to state 35
    COMMA                shift, and go to state 36


State 28

   12 formal_param_list: formal_param .

    $default  reduce using rule 12 (formal_param_list)


State 29

   13 formal_param: param_type . NAME

    NAME  shift, and go to state 37


State 30

   22 var_decl_stmt: named_type var_decl_item_list SEMICOLON .

    $default  reduce using rule 22 (var_decl_stmt)


State 31

   23 var_decl_item_list: var_decl_item_list COMMA . var_decl_item

    NAME  shift, and go to state 38

    var_decl_item  go to state 39


State 32

    7 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . SEMICOLON
   10 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 34
    LEFT_CURLY_BRACKET  shift, and go to state 40


State 33

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET SEMICOLON
    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET
   11 formal_param_list: formal_param_list . COMMA formal_param

    RIGHT_ROUND_BRACKET  shift, and go to state 41
    COMMA                shift, and go to state 36


State 34

    7 func_decl: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 7 (func_decl)


State 35

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 36

   11 formal_param_list: formal_param_list COMMA . formal_param

    INTEGER  shift, and go to state 22
    FLOAT    shift, and go to state 23
    STRING   shift, and go to state 24
    BOOL     shift, and go to state 25

    formal_param  go to state 43
    param_type    go to state 29


State 37

   13 formal_param: param_type NAME .

    $default  reduce using rule 13 (formal_param)


State 38

   25 var_decl_item: NAME .

    $default  reduce using rule 25 (var_decl_item)


State 39

   23 var_decl_item_list: var_decl_item_list COMMA var_decl_item .

    $default  reduce using rule 23 (var_decl_item_list)


State 40

   10 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 18 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 44
    var_decl_stmt_list                 go to state 45
    var_decl_stmt                      go to state 46
    named_type                         go to state 47


State 41

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . SEMICOLON
    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    SEMICOLON           shift, and go to state 42
    LEFT_CURLY_BRACKET  shift, and go to state 48


State 42

    6 func_decl: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET SEMICOLON .

    $default  reduce using rule 6 (func_decl)


State 43

   11 formal_param_list: formal_param_list COMMA formal_param .

    $default  reduce using rule 11 (formal_param_list)


State 44

   10 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 32 (statement_list)

    statement_list  go to state 49


State 45

   19 optional_local_var_decl_stmt_list: var_decl_stmt_list .
   21 var_decl_stmt_list: var_decl_stmt_list . var_decl_stmt

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 19 (optional_local_var_decl_stmt_list)

    var_decl_stmt  go to state 50
    named_type     go to state 47


State 46

   20 var_decl_stmt_list: var_decl_stmt .

    $default  reduce using rule 20 (var_decl_stmt_list)


State 47

   22 var_decl_stmt: named_type . var_decl_item_list SEMICOLON

    NAME  shift, and go to state 38

    var_decl_item_list  go to state 19
    var_decl_item       go to state 20


State 48

    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET

    INTEGER  shift, and go to state 1
    VOID     shift, and go to state 2
    FLOAT    shift, and go to state 3
    STRING   shift, and go to state 4
    BOOL     shift, and go to state 5

    $default  reduce using rule 18 (optional_local_var_decl_stmt_list)

    optional_local_var_decl_stmt_list  go to state 51
    var_decl_stmt_list                 go to state 45
    var_decl_stmt                      go to state 46
    named_type                         go to state 47


State 49

   10 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   31 statement_list: statement_list . statement

    RIGHT_CURLY_BRACKET  shift, and go to state 52
    WRITE                shift, and go to state 53
    READ                 shift, and go to state 54
    NAME                 shift, and go to state 55

    statement             go to state 56
    assignment_statement  go to state 57
    variable_as_operand   go to state 58
    variable_name         go to state 59
    print_statement       go to state 60
    read_statement        go to state 61


State 50

   21 var_decl_stmt_list: var_decl_stmt_list var_decl_stmt .

    $default  reduce using rule 21 (var_decl_stmt_list)


State 51

    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list . statement_list RIGHT_CURLY_BRACKET

    $default  reduce using rule 32 (statement_list)

    statement_list  go to state 62


State 52

   10 func_def: func_header LEFT_ROUND_BRACKET RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 10 (func_def)


State 53

   39 print_statement: WRITE . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 69
    constant_as_operand  go to state 70


State 54

   40 read_statement: READ . variable_name SEMICOLON

    NAME  shift, and go to state 55

    variable_name  go to state 71


State 55

   38 variable_name: NAME .

    $default  reduce using rule 38 (variable_name)


State 56

   31 statement_list: statement_list statement .

    $default  reduce using rule 31 (statement_list)


State 57

   33 statement: assignment_statement .

    $default  reduce using rule 33 (statement)


State 58

   36 assignment_statement: variable_as_operand . ASSIGN_OP expression SEMICOLON

    ASSIGN_OP  shift, and go to state 72


State 59

   37 variable_as_operand: variable_name .

    $default  reduce using rule 37 (variable_as_operand)


State 60

   34 statement: print_statement .

    $default  reduce using rule 34 (statement)


State 61

   35 statement: read_statement .

    $default  reduce using rule 35 (statement)


State 62

    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list . RIGHT_CURLY_BRACKET
   31 statement_list: statement_list . statement

    RIGHT_CURLY_BRACKET  shift, and go to state 73
    WRITE                shift, and go to state 53
    READ                 shift, and go to state 54
    NAME                 shift, and go to state 55

    statement             go to state 56
    assignment_statement  go to state 57
    variable_as_operand   go to state 58
    variable_name         go to state 59
    print_statement       go to state 60
    read_statement        go to state 61


State 63

   46 expression: LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 74
    constant_as_operand  go to state 70


State 64

   45 expression: MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 75
    constant_as_operand  go to state 70


State 65

   49 constant_as_operand: INT_NUM .

    $default  reduce using rule 49 (constant_as_operand)


State 66

   50 constant_as_operand: FLOAT_NUM .

    $default  reduce using rule 50 (constant_as_operand)


State 67

   51 constant_as_operand: STR_CONST .

    $default  reduce using rule 51 (constant_as_operand)


State 68

   47 expression: variable_as_operand .

    $default  reduce using rule 47 (expression)


State 69

   39 print_statement: WRITE expression . SEMICOLON
   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression

    SEMICOLON  shift, and go to state 76
    PLUS       shift, and go to state 77
    MINUS      shift, and go to state 78
    MULT       shift, and go to state 79
    DIV        shift, and go to state 80


State 70

   48 expression: constant_as_operand .

    $default  reduce using rule 48 (expression)


State 71

   40 read_statement: READ variable_name . SEMICOLON

    SEMICOLON  shift, and go to state 81


State 72

   36 assignment_statement: variable_as_operand ASSIGN_OP . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 82
    constant_as_operand  go to state 70


State 73

    9 func_def: func_header LEFT_ROUND_BRACKET formal_param_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET optional_local_var_decl_stmt_list statement_list RIGHT_CURLY_BRACKET .

    $default  reduce using rule 9 (func_def)


State 74

   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression
   46           | LEFT_ROUND_BRACKET expression . RIGHT_ROUND_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 83
    PLUS                 shift, and go to state 77
    MINUS                shift, and go to state 78
    MULT                 shift, and go to state 79
    DIV                  shift, and go to state 80


State 75

   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression
   45           | MINUS expression .

    MULT  shift, and go to state 79
    DIV   shift, and go to state 80

    $default  reduce using rule 45 (expression)


State 76

   39 print_statement: WRITE expression SEMICOLON .

    $default  reduce using rule 39 (print_statement)


State 77

   41 expression: expression PLUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 84
    constant_as_operand  go to state 70


State 78

   42 expression: expression MINUS . expression

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 85
    constant_as_operand  go to state 70


State 79

   43 expression: expression MULT . expression

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 86
    constant_as_operand  go to state 70


State 80

   44 expression: expression DIV . expression

    LEFT_ROUND_BRACKET  shift, and go to state 63
    MINUS               shift, and go to state 64
    INT_NUM             shift, and go to state 65
    FLOAT_NUM           shift, and go to state 66
    NAME                shift, and go to state 55
    STR_CONST           shift, and go to state 67

    variable_as_operand  go to state 68
    variable_name        go to state 59
    expression           go to state 87
    constant_as_operand  go to state 70


State 81

   40 read_statement: READ variable_name SEMICOLON .

    $default  reduce using rule 40 (read_statement)


State 82

   36 assignment_statement: variable_as_operand ASSIGN_OP expression . SEMICOLON
   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression

    SEMICOLON  shift, and go to state 88
    PLUS       shift, and go to state 77
    MINUS      shift, and go to state 78
    MULT       shift, and go to state 79
    DIV        shift, and go to state 80


State 83

   46 expression: LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET .

    $default  reduce using rule 46 (expression)


State 84

   41 expression: expression . PLUS expression
   41           | expression PLUS expression .
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression

    MULT  shift, and go to state 79
    DIV   shift, and go to state 80

    $default  reduce using rule 41 (expression)


State 85

   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   42           | expression MINUS expression .
   43           | expression . MULT expression
   44           | expression . DIV expression

    MULT  shift, and go to state 79
    DIV   shift, and go to state 80

    $default  reduce using rule 42 (expression)


State 86

   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   43           | expression MULT expression .
   44           | expression . DIV expression

    $default  reduce using rule 43 (expression)


State 87

   41 expression: expression . PLUS expression
   42           | expression . MINUS expression
   43           | expression . MULT expression
   44           | expression . DIV expression
   44           | expression DIV expression .

    $default  reduce using rule 44 (expression)


State 88

   36 assignment_statement: variable_as_operand ASSIGN_OP expression SEMICOLON .

    $default  reduce using rule 36 (assignment_statement)
